// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provision/DatabaseAccount/DatabaseAccountDetailModal render click copy password 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-rva8cb"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  账号详情
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      连接信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接账号名
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            test1
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          主机名
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            %
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接密码
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="css-1sg2lsz"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="rect-border-wrapper css-1iiq8r2"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M11.333 9.333H8.44A4.002 4.002 0 0 1 .667 8a4 4 0 0 1 7.772-1.333h6.894v2.666H14V12h-2.667zm-6.666 0a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666"
                                        fill="#8A8F99"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                              <span
                                class="ant-typography"
                              >
                                <div
                                  aria-label="复制成功"
                                  class="ant-typography-copy ant-typography-copy-success"
                                  role="button"
                                  style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                                  tabindex="0"
                                >
                                  <span
                                    aria-label="check"
                                    class="anticon anticon-check"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="check"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          本次密码生成时间
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-06-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          密码有效期
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-07-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                复制连接串
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      数据权限
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          角色
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                            >
                              role1
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          权限
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px; padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                ALL ON database-1.table-1
                              </div>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                CREATE_USER
                              </div>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      授权信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          授权成员
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <div
                              class="flex-display"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-avatar ant-avatar-sm ant-avatar-circle action-avatar css-1wq79dc"
                                    style="display: inline-block; margin-right: 12px;"
                                  >
                                    <span
                                      class="ant-avatar-string"
                                      style="transform: scale(1) translateX(-50%);"
                                    >
                                      T
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      全文复制
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`provision/DatabaseAccount/DatabaseAccountDetailModal render init snap 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-rva8cb"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  账号详情
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      连接信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接账号名
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            test1
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          主机名
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            %
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接密码
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="css-1sg2lsz"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="rect-border-wrapper css-1iiq8r2"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M11.333 9.333H8.44A4.002 4.002 0 0 1 .667 8a4 4 0 0 1 7.772-1.333h6.894v2.666H14V12h-2.667zm-6.666 0a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666"
                                        fill="#8A8F99"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                              <span
                                class="ant-typography"
                              >
                                <div
                                  aria-label="复制"
                                  class="ant-typography-copy"
                                  role="button"
                                  style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                                  tabindex="0"
                                >
                                  <span
                                    aria-label="copy"
                                    class="anticon anticon-copy"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="copy"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          本次密码生成时间
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-06-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          密码有效期
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-07-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                复制连接串
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      数据权限
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          角色
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                            >
                              role1
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          权限
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px; padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                ALL ON database-1.table-1
                              </div>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                CREATE_USER
                              </div>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      授权信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          授权成员
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <div
                              class="flex-display"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-avatar ant-avatar-sm ant-avatar-circle action-avatar css-1wq79dc"
                                    style="display: inline-block; margin-right: 12px;"
                                  >
                                    <span
                                      class="ant-avatar-string"
                                      style="transform: scale(1) translateX(-50%);"
                                    >
                                      T
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      全文复制
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
